--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,4 +1,4 @@
 seylan.url = https://www.seylan.lk/exchange-rates
 boc.url = https://web.boc.lk/boc/index.php?route=rates/rates
 
-chrome.driver.path = webDrivers/chromedriver.exe
+chrome.driver.path = webDrivers/chromedriver
