New Framework is uploaded for first test case
Signed-off-by: Saliya Gunawardena <saliyaguna@gmail.com>

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,4 +1,3 @@
-seylan.url = https://www.seylan.lk/exchange-rates
-boc.url = https://web.boc.lk/boc/index.php?route=rates/rates
+url = https://www.binance.com/en
 
-chrome.driver.path = webDrivers/chromedriver
+chrome.driver.path = webDrivers/chromedriver.exe
