Signed-off-by: Saliya Gunawardena <saliyaguna@gmail.com>

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,4 +16,4 @@ jobs:
     - name: Build with Maven
       run: mvn -B -DskipTests=true package --file pom.xml
     - name: Deploy with Maven GIT
-      run: mvn deploy -Dregistry=https://maven.pkg.github.com/HSGunawardena -Dtoken=GH_TOKEN
+      run: mvn -DskipTests=true deploy -Dregistry=https://maven.pkg.github.com/HSGunawardena -Dtoken=GH_TOKEN
